コメント機能を追加。CRUDに対応。

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -568,6 +568,10 @@ textarea:focus {
   cursor: default;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
